Code refactoring, adding books component

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/">
-    <title>Angular 2 Boilerplate</title>
+    <title>Bible Diary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -15,7 +15,6 @@
     <script src="node_modules/angular2/bundles/angular2.js"></script>
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.js"></script>
-
 
     <link rel="stylesheet" href="src/css/app.css">
 </head>
@@ -31,8 +30,8 @@
             }
         }
     });
-    System.import('app/boot')
-            .then(null, console.error.bind(console));
+    System.import('app/main')
+        .then(null, console.error.bind(console));
 </script>
 </body>
 </html>
